compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__results__aliased_ok.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/results.rs
assertion_line: 57
expression: "import gleam.{Ok as Thing}\npub fn main() { Thing(1) }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam.{Ok as Thing}
pub fn main() { Thing(1) }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok as Thing } from "../gleam.mjs";

export function main() {
  return new Thing(1);
}
