compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__results__error.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/results.rs
assertion_line: 10
expression: "pub fn main() { Error(1) }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { Error(1) }

----- COMPILED JAVASCRIPT
import { Error } from "../gleam.mjs";

export function main() {
  return new Error(1);
}
