compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__results__ok.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/results.rs
assertion_line: 5
expression: "pub fn main() { Ok(1) }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { Ok(1) }

----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export function main() {
  return new Ok(1);
}
