compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__results__qualified_error_fn.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/results.rs
assertion_line: 49
expression: "import gleam\npub fn main() { gleam.Error }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn main() { gleam.Error }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function main() {
  return (var0) => { return new $gleam.Error(var0); };
}
