compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__results__qualified_ok.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/results.rs
assertion_line: 25
expression: "import gleam\npub fn main() { gleam.Ok(1) }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn main() { gleam.Ok(1) }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function main() {
  return new $gleam.Ok(1);
}
