compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__results__qualified_ok_fn.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/results.rs
assertion_line: 41
expression: "import gleam\npub fn main() { gleam.Ok }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn main() { gleam.Ok }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function main() {
  return (var0) => { return new $gleam.Ok(var0); };
}
